fix: correct flex wrapping shorthand

--- a/src/components/molecules/HomeJumbotron/HomeJumbotron.scss
+++ b/src/components/molecules/HomeJumbotron/HomeJumbotron.scss
@@ -3,7 +3,7 @@
 
 .home__jumbotron__wrapper {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row nowrap;
   justify-content: center;
 }
 
